fix(user): remediate x-axis overflow on completion progress

--- a/resources/css/legacy.css
+++ b/resources/css/legacy.css
@@ -104,6 +104,7 @@
 #usercompletedgamescomponent {
   max-height: 30.0em;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #devstatsscrollpane {
